add form and table

--- a/index.html
+++ b/index.html
@@ -6,8 +6,50 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <title></title>
   </head>
   <body>
     <script src="D5.js"></script>
+    <header>
+      <div class="classe1">
+        <img src="./assets/images/logo.png" alt="" />
+      </div>
+      <div class="classe2">
+        <p><span>All </span> <span>Today's deals </span><span>Customer Service</span> <span>Registry </span> <span>Gift Cards</span> <span>Sell</span></p>
+      </div>
+      <div class="orang">
+        <p>Shop All Holiday Gift Cards</p>
+      </div>
+      <div class="Holiday">
+        <h1>Holiday Gift Guides</h1>
+        <h3>Be a go-gifter</h3>
+      </div>
+    </header>
+    <main>
+      <div class="immagini">
+        <p>Find the perfect gift <a href="#"> Shop now</a></p>
+        <img src="./assets/images/img_1.jpg" alt="" />
+        <img src="./assets/images/img_2.jpg" alt="" />
+        <img src="./assets/images/img_3.jpg" alt="" />
+        <img src="./assets/images/img_4.jpg" alt="" />
+      </div>
+
+      <div class="immagine2">
+        <img src="./assets/images/img_9.png" alt="" />
+        <p>Play the gifting game <a href="#">Shop gaming</a></p>
+      </div>
+      <div class="immagine3">
+        <img src="assets/images/img_10.png" alt="" />
+        <p>The sound of cheer <a href="#"> Shop Audio & Accessories </a></p>
+      </div>
+      <div class="noimg">
+        <p>Back to top</p>
+      </div>
+      <div class="immagine4">
+        <img src="./assets/images/logo.png" alt="logo" />
+      </div>
+    </main>
+
+    <h1></h1>
   </body>
 </html>
